--- a/index.html
+++ b/index.html
@@ -6,11 +6,17 @@
     <meta name="viewport" content="width=device-width", initial-scale=1.0">
     <title>Document</title>
 
-    <script src="scripts.js"></script>
+    <script src="scripts.js" defer></script>
+
+
 
 </head>
 <body>
 
+
+    <button class = "rock">ROCK</button>
+    <button class = "paper">PAPER</button>
+    <button class = "scissor">SCISSOR</button>
     
 </body>
 </html>
