got everthhing in working order, UI needs to be updated

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width", initial-scale=1.0">
-    <title>Document</title>
+    <title>Arcade Game</title>
 
     <script src="scripts.js" defer></script>
 
@@ -13,11 +13,18 @@
 </head>
 <body>
 
+    <button class = "btn rock">ROCK</button>
+    <button class = "btn paper">PAPER</button>
+    <button class = "btn scissor">SCISSOR</button>
 
-    <button class = "rock">ROCK</button>
-    <button class = "paper">PAPER</button>
-    <button class = "scissor">SCISSOR</button>
+    <div class = "results"></div>
     
+    <div class = "running-score"></div>
+        <div class ="playerScore">Player Score: 0 </div>
+        <div class ="computerScore">Computer Score: 0</div>
+    </div>
+
+
 </body>
 </html>
 
