--- a/index.html
+++ b/index.html
@@ -6,25 +6,38 @@
     <meta name="viewport" content="width=device-width", initial-scale=1.0">
     <title>Arcade Game</title>
 
+    <link rel="stylesheet" href = "styles.css">
     <script src="scripts.js" defer></script>
 
 
 
 </head>
 <body>
+<div class ="wrapper">    
+    <h1> ROCK VS. PAPER VS. SCISSORS</h1>
+    <h2> - MAKE YOUR CHOICE -</h2>
 
-    <button class = "btn rock">ROCK</button>
-    <button class = "btn paper">PAPER</button>
-    <button class = "btn scissor">SCISSOR</button>
-
+<div class = "buttons">
+    <button class = "btn rock"><img class = "rock1" src = stone.png></button>
+    <button class = "btn paper"><img class = "paper1" src = paper.png></button>
+    <button class = "btn scissor"><img class = "scissor1" src = scissors.png></button>
+</div>
+    <div class = "selections"></div>
     <div class = "results"></div>
     
-    <div class = "running-score"></div>
+    <div class = "runningscore">
         <div class ="playerScore">Player Score: 0 </div>
         <div class ="computerScore">Computer Score: 0</div>
     </div>
 
 
+    <h5> -FIRST TO 5 WINS-</h5>
+</div>
 </body>
 </html>
 
+<div class = "footer">
+<a href="https://www.flaticon.com/free-icons/rock" title="rock icons">Rock icons created by Freepik - Flaticon</a>
+<a href="https://www.flaticon.com/free-icons/paper" title="paper icons">Paper icons created by Freepik - Flaticon</a>
+<a href="https://www.flaticon.com/free-icons/scissors" title="scissors icons">Scissors icons created by Freepik - Flaticon</a>
+</div>
